NIFI-11259 Adjusted property ordering and naming